[metadata]
name = hipocount-napari
version = 0.0.1

author = Borys Olifirov
author_email = omnia.fatum@gmail.com
license = MIT
description = Quantitative analysis of immunofluorescence images of hippocampal slices
long_description = file: README.md
long_description_content_type = text/markdown

project_urls =
    Documentation = https://github.com/wisstock/hipocount-napari
    Source Code = https://github.com/wisstock/hipocount-napari
    Bug Tracker = https://github.com/wisstock/hipocount-napari/issues
    User Support = https://github.com/wisstock/hipocount-napari/issues

classifiers =
    Framework :: napari

    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src
install_requires =
    napari

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    hipocount-napari = hipocount_napari:napari.yaml